rbind, cbind used

--- a/R/quiz180912_Report.html
+++ b/R/quiz180912_Report.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="coop711" />
 
-<meta name="date" content="2018-09-18" />
+<meta name="date" content="2018-09-22" />
 
 <title>Quiz 180912</title>
 
@@ -124,7 +124,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Quiz 180912</h1>
 <h4 class="author"><em>coop711</em></h4>
-<h4 class="date"><em>2018-09-18</em></h4>
+<h4 class="date"><em>2018-09-22</em></h4>
 
 </div>
 
@@ -306,7 +306,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="right">8.683</td>
 <td align="right">NA</td>
-<td align="right">0.06047</td>
+<td align="right">0.06897</td>
 </tr>
 </tbody>
 </table>
@@ -424,7 +424,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="right">8.683</td>
 <td align="right">NA</td>
-<td align="right">0.06847</td>
+<td align="right">0.05947</td>
 </tr>
 </tbody>
 </table>
@@ -538,22 +538,21 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">6.286</td>
+<td align="right">1.506</td>
 <td align="right">NA</td>
-<td align="right">0.1899</td>
+<td align="right">0.4493</td>
 </tr>
 </tbody>
 </table>
 </div>
 <div id="." class="section level5">
 <h5>% 비교.</h5>
-<table>
+<table style="width:90%;">
 <colgroup>
 <col width="41%"></col>
 <col width="9%"></col>
 <col width="9%"></col>
 <col width="19%"></col>
-<col width="9%"></col>
 <col width="9%"></col>
 </colgroup>
 <thead>
@@ -563,24 +562,21 @@ $(document).ready(function () {
 <th align="center">반대</th>
 <th align="center">모름/무응답</th>
 <th align="center">계</th>
-<th align="center">계</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left"><strong>Red(찬성에 부연 설명)</strong></td>
-<td align="center">36.1</td>
-<td align="center">5.4</td>
-<td align="center">5.4</td>
-<td align="center">53.1</td>
+<td align="center">76.8</td>
+<td align="center">11.6</td>
+<td align="center">11.6</td>
 <td align="center">100.0</td>
 </tr>
 <tr class="even">
 <td align="left"><strong>Black(반대에 부연 설명)</strong></td>
-<td align="center">32.7</td>
-<td align="center">6.7</td>
-<td align="center">8.7</td>
-<td align="center">52.0</td>
+<td align="center">68.1</td>
+<td align="center">13.9</td>
+<td align="center">18.1</td>
 <td align="center">100.0</td>
 </tr>
 </tbody>
