cbind, rbind used

--- a/R/quiz180910_Report.html
+++ b/R/quiz180910_Report.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="coop711" />
 
-<meta name="date" content="2018-09-11" />
+<meta name="date" content="2018-09-22" />
 
 <title>Quiz 180910</title>
 
@@ -92,6 +92,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -121,7 +124,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Quiz 180910</h1>
 <h4 class="author"><em>coop711</em></h4>
-<h4 class="date"><em>2018-09-11</em></h4>
+<h4 class="date"><em>2018-09-22</em></h4>
 
 </div>
 
@@ -423,7 +426,7 @@ $(document).ready(function () {
 </div>
 <div id="." class="section level5">
 <h5>집계표.</h5>
-<p>부연설명 여부(Red는 부연설명, Black은 부연설명 없음)에 따라 응답에 영향. 당초 부연설명을 한 Red 집단에서 찬성 비율이 높을 것으로 기대하였으나 결과는 반대로 나옴. 통계적으로 유의한 수준임.</p>
+<p>부연설명 여부(Red는 부연설명, Black은 부연설명 없음)에 따라 응답에 영향. 당초 부연설명을 한 Red 집단에서 찬성 비율이 높을 것으로 기대하였으나 결과는 반대로 나옴. 통계적으로 유의한 수준은 아니나 상당히 가까움.</p>
 <table style="width:89%;">
 <colgroup>
 <col width="16%"></col>
