--- a/R/quiz180903_Report.html
+++ b/R/quiz180903_Report.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="coop711" />
 
-<meta name="date" content="2018-09-04" />
+<meta name="date" content="2018-09-22" />
 
 <title>Quiz 180903</title>
 
@@ -92,6 +92,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -121,7 +124,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Quiz 180903</h1>
 <h4 class="author"><em>coop711</em></h4>
-<h4 class="date"><em>2018-09-04</em></h4>
+<h4 class="date"><em>2018-09-22</em></h4>
 
 </div>
 
@@ -202,7 +205,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="right">6.091</td>
 <td align="right">NA</td>
-<td align="right">0.1769</td>
+<td align="right">0.1714</td>
 </tr>
 </tbody>
 </table>
