--- a/R/quiz180314_Report.html
+++ b/R/quiz180314_Report.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="coop711" />
 
-<meta name="date" content="2018-03-30" />
+<meta name="date" content="2018-10-03" />
 
 <title>Quiz 180314</title>
 
@@ -92,6 +92,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -121,7 +124,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Quiz 180314</h1>
 <h4 class="author"><em>coop711</em></h4>
-<h4 class="date"><em>2018-03-30</em></h4>
+<h4 class="date"><em>2018-10-03</em></h4>
 
 </div>
 
@@ -202,7 +205,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="right">2.616</td>
 <td align="right">NA</td>
-<td align="right">0.6357</td>
+<td align="right">0.6407</td>
 </tr>
 </tbody>
 </table>
@@ -317,7 +320,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="right">5.49</td>
 <td align="right">NA</td>
-<td align="right">0.3438</td>
+<td align="right">0.3563</td>
 </tr>
 </tbody>
 </table>
@@ -437,7 +440,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="right">21.17</td>
 <td align="right">NA</td>
-<td align="right">0.0009995 * * *</td>
+<td align="right">0.0004998 * * *</td>
 </tr>
 </tbody>
 </table>
@@ -560,7 +563,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="right">7.342</td>
 <td align="right">NA</td>
-<td align="right">0.02999 *</td>
+<td align="right">0.02599 *</td>
 </tr>
 </tbody>
 </table>
