--- a/R/etest_02_report.html
+++ b/R/etest_02_report.html
@@ -90,6 +90,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -453,6 +456,9 @@ $(document).ready(function () {
 </table>
 </div>
 </div>
+</div>
+<div id="save" class="section level2">
+<h2>Save</h2>
 </div>
 
 
